Add initial blog drafts: "Getting started" and "Why does the internet feel so soulless these days?"

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 html {
   overflow-y: scroll;
   color-scheme: light;
-  font-family: 'Inter' !important;
+  font-family: "Inter" !important;
 }
 
 html.dark {
@@ -42,6 +42,10 @@ article {
   @apply max-w-full prose dark:prose-invert prose-img:mx-auto prose-img:my-auto;
   @apply prose-headings:font-semibold prose-p:font-sans;
   @apply prose-headings:text-black prose-headings:dark:text-white;
+}
+
+article img {
+  border-radius: 8px;
 }
 
 @layer utilities {
