--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -41,6 +41,9 @@ const { Content } = await post.render();
       <div class="animate text-2xl font-semibold text-black dark:text-white">
         {post.data.title}
       </div>
+        <div class="text-base text-gray-600 dark:text-gray-400 animate italic">
+          {post.data.description}
+        </div>
     </div>
     <article class="animate">
       <Content />
